<resources>

    <!-- App -->
    <string name="app_name">Handmade</string>
    <string name="logo_desc">AURA Logo</string>

    <!-- Sign Up -->
    <string name="create_account">Create Your Account</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <!-- Login -->
    <string name="login_title">Welcome Back</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_username">User Name</string>
    <string name="dont_have_account">Don\'t have an account? </string>

    <!-- Wishlist -->
    <string name="wishlist_title">My Wishlist</string>

    <string name="product_necklace">Y-SHAPED Necklace</string>
    <string name="product_ring">Ring Heart</string>
    <string name="product_bracelet">Gold Chain Bracelet</string>
    <string name="product_earring">Elegant Earring</string>

    <string name="review_499">4.99 (99 reviews)</string>
    <string name="review_45">4.5 (99 reviews)</string>
    <string name="review_42">4.2 (99 reviews)</string>

    <string name="price_1500">EGP 1500.00</string>
    <string name="price_1000">EGP 1000.00</string>
    <string name="price_500">EGP 500.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="guest">Guest</string>
    <string name="notification">Notification</string>
    <string name="display">Display</string>
    <string name="system_light">System Light</string>
    <string name="system_dark">System Dark</string>
    <string name="privacy">Privacy</string>
    <string name="payment">Payment</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="go">Go</string>
    <string name="expand">Expand</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="Profile">Profile</string>
    <string name="back">back</string>
    <string name="settings">settings</string>
    <string name="language">language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>


    <!-- Messages -->
    <string name="msg_fill_all">Please fill all fields</string>
    <string name="msg_password_mismatch">Passwords not matching</string>
    <string name="msg_account_created">Account created</string>
    <string name="msg_username_exists">Username or Email already exists</string>
    <string name="msg_login_first">Please login first</string>
    <string name="msg_added_wishlist">Added to wishlist</string>
    <string name="msg_removed_wishlist">Removed from wishlist</string>
    <string name="msg_empty_creds">empty username &amp; pass</string>
    <string name="msg_wrong_creds">wrong username or pass</string>
    <string name="msg_wishlist_empty">Wishlist is empty</string>
    <string name="msg_logged_in">Logged in</string>

    <string name="arabic">arabic</string>
    <string name="english">english</string>
    <string name="choose_language">Choose language</string>

        <string name="hero">Hero</string>
        <string name="aura_logo">AURA Logo</string>
        <string name="tagline"> A brand of handmade jewellery made in Egypt</string>
        <string name="best_sellers">Best sellers</string>
        <string name="categories">Categories</string>

        <string name="favorite">Favorite</string>

        <string name="choker">Choker</string>
        <string name="ring">Ring</string>
        <string name="earrings">Earrings</string>

        <!-- Best seller items text -->
        <string name="item1_name">Choker Monica</string>
        <string name="item1_reviews">5.0 (92 reviews)</string>
        <string name="item1_price">EGP 1499.00</string>

        <string name="item2_name">Ring Heart</string>
        <string name="item2_reviews">4.9 (114 reviews)</string>
        <string name="item2_price">EGP 1299.00</string>

        <string name="item3_name">Earrings Luna</string>
        <string name="item3_reviews">4.8 (76 reviews)</string>
        <string name="item3_price">EGP 999.00</string>

        <!-- Categories labels -->
        <string name="necklaces">Necklaces</string>
        <string name="rings">Rings</string>
        <string name="sets">Sets</string>

    </resources>
